Revision history for DBIx-Class-Fixtures

1.001008
- Man, I should test better.

1.001007
- Should use Schema->source(), not ->resultset().

1.001006
- Schema->resultset() throws an exception, not return undef, when it can't find
  a moniker.

1.001005
- Fixed problem where rules containing an override of has_many weren't applied
  correctly.

1.001004
- Fixed problem where descending a has_many to something with two belongs_to
  relationships wouldn't get the second belongs_to.

1.001003
- Fix t/var/configs/*.json to use valid JSON syntax
- Fixed DateTime::Format dependencies

1.001002
- Allow passing schema object to ->populate
- Check that fixture population dir was created

1.001001
- debug defaults to 0 rather than undef
- cleanup only deletes what's necessary
- added db specific dbi files so that postgres can use deferrable

1.001000
- Added includes functionality
- Added post_ddl and cascade attributes to populate (Drew Taylor)
- Scalar refs in cond clauses handled in sets as well as fetches (Sebastian Willert)
- Directory separators in primary keys do not cause a crash (Sebastian Willert)
- Optimised populate to take advantage of insert_bulk (Drew Taylor)

1.000001
- Added missing deps

1.000000
- Released
